--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,12 @@ a, a:visited, a:hover, a:active
 	color: #7B3A12;
 }
 
+a.btn, a.btn:visited, a.btn:hover, a.btn:active
+{
+	color: #EFEEF8;
+}
+
+
 p, ul
 {
 	color: #000000;
